fix some layout issues

--- a/docroot/themes/custom/izmir/css/style-rtl.css
+++ b/docroot/themes/custom/izmir/css/style-rtl.css
@@ -14,3 +14,6 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6{
     left:0;
     right:auto;
 }
+[class*="block-grid-"] > div{
+    float: right;
+}
